# qtQuickTest

./: CMakeLists.txt  README.md
android/: AndroidManifest.xml
android/res/drawable/: splash.xml
src/: CMakeLists.txt  main.cpp
src/contents/ui/: main.qml
